2014-08-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistcs.man: Add missing documentation for random-poisson procedure

2014-01-30  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: Corrected edge case in pointInsidePolygon (by closer checking
	                intersection of line segments; ticket c1ca34ead3).
	                Also introduced a procedure calculateDistanceToPolygon to solve ticket bff902be35
	* math_geometry.man: Description of new procedure pointInsidePolygon
	* geometry.test: Added test cases based on both tickets
	* pkgIndex.tcl: Bumped version to 1.1.3

2014-01-19  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* stat_kernel.tcl: Corrected use of bandwidth
	* statistics.test: Added margin per kernel - not quite satisfactory in the case of the uniform kernel

2014-01-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Added stat_kernel.tcl
	* stat_kernel.tcl: Implements a straightforward kernel density estimation procedure
	* statistics.man: Describe the kernel denstity estimation procedure, moved the description of several
	                  tests to the general section
	* statistics.test: Added three tests for the kernel density estimation (note: one result is a bit troublesome)
	* pkgIndex.tcl: Bumped version of statistics package to 0.9

2013-12-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: [Ticket 843c2257d2] Added special case for points coincident with the data points
	* interpolate.test: [Ticket 843c2257d2] Added test case for coincident points

2013-12-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* decimal.man: Fixed missing requirement of the package
	* machineparameters.man: itself.

2013-11-03  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* calculus.tcl: Corrected calculation of corrector in heunStep (now version 0.7.2)
	* pkgIndex.tcl: [Ticket b25b826973] Bumped version of interpolate to 1.1